third_party/WebKit/Source/core/style/ComputedStyle.h
@@ -3751,6 +3751,7 @@ class CORE_EXPORT ComputedStyle : public ComputedStyleBase,
   bool diffNeedsPaintInvalidationObjectForPaintImage(
       const StyleImage*,
       const ComputedStyle& other) const;
+  bool diffNeedsPaintInvalidationSelection(const ComputedStyle& other) const;
   void updatePropertySpecificDifferences(const ComputedStyle& other,
                                          StyleDifference&) const;
 
